[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/military/projectile/projectile.gd" type="Script" id=1]
[ext_resource path="res://asset/military/projectile/powder_grenade/powder_grenade.png" type="Texture" id=2]
[ext_resource path="res://asset/military/projectile/tracer.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 10.777

[sub_resource type="Animation" id=3]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -35, -3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "spin"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 52.4938, 132.704, 198.532, 251.464, 319.308, 357.612 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10, -5 ) ]
}

[node name="projectile" type="Area2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 3.8147e-06, 0 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -35, -3 )

[node name="tracer" type="Sprite" parent="sprite"]
visible = false
modulate = Color( 1, 1, 1, 0.329412 )
position = Vector2( -52.1709, -0.342023 )
scale = Vector2( 1.49913, 0.475833 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.61703
shape = SubResource( 1 )

[node name="life_time" type="Timer" parent="."]
wait_time = 1.3
autostart = true

[node name="tracer_display_delay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/normal = SubResource( 3 )
anims/spin = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_arrow_body_entered"]
[connection signal="timeout" from="life_time" to="." method="_on_time_out_timeout"]
[connection signal="timeout" from="tracer_display_delay" to="." method="_on_tracer_display_delay_timeout"]
